--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "prettier": "^2.4.1",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
+    "node-sass": "^7.0.0",
     "typescript": "~4.5.5"
   },
   "eslintConfig": {
